objects/CongaComposerTemplateValues__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Used for Conga Parameters and Queries</description>
    <fields>
        <fullName>AUStorageLicense__c</fullName>
        <label>[AUStorageLicense]</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccptAdditionalResponse__c</fullName>
        <description>Extract the information of ADDITIONAL RESPONSES FOR RECURRING LESSEE COMMENTS</description>
        <label>[AccptAdditionalResponse]</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccptDocumentLocation__c</fullName>
        <label>[AccptDocumentLocation]</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccptKeyDisclosureItems__c</fullName>
        <label>[AccptKeyDisclosureItems]</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccptLeaseExpiry__c</fullName>
        <label>[AccptLeaseExpiry]</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccptLessorDisclosureStatement__c</fullName>
        <label>[AccptLessorDisclosureStatement]</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccptPart10OtherDS__c</fullName>
        <label>[AccptPart10OtherDS]</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccptPart1CarSpaces_HeadLease__c</fullName>
        <label>[AccptPart1CarSpaces&amp;HeadLease]</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccptPart1Master__c</fullName>
        <label>[AccptPart1Master]</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccptPart1PermittedUse__c</fullName>
        <label>[AccptPart1PermittedUse]</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccptPart1Premises__c</fullName>
        <label>[AccptPart1Premises]</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccptPart2TermOfLease__c</fullName>
        <label>[AccptPart2TermOfLease]</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccptPart3Fitout__c</fullName>
        <label>[AccptPart3Fitout]</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccptPart4Rent__c</fullName>
        <label>[AccptPart4Rent]</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccptPart5Outgoings__c</fullName>
        <label>[AccptPart5Outgoings]</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccptPart6OtherCosts__c</fullName>
        <label>[AccptPart6OtherCosts]</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccptPart7AlterationWorks__c</fullName>
        <label>[AccptPart7AlterationWorks]</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccptPart8TradingHours__c</fullName>
        <label>[AccptPart8TradingHours]</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccptPart9RetailShoppingCentre__c</fullName>
        <label>[AccptPart9RetailShoppingCentre]</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccptPermittedUse__c</fullName>
        <label>[AccptPermittedUse]</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccptPremisesDetails__c</fullName>
        <label>[AccptPremisesDetails]</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccptUpfrontPrice__c</fullName>
        <label>[AccptUpfrontPrice]</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AirCon__c</fullName>
        <label>[AirCon]</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COVID19OfferLetterTemplate_c__c</fullName>
        <description>Offer Letter Template</description>
        <label>COVID19OfferLetterTemplate__c</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CappedOccClause__c</fullName>
        <label>[CappedOccClause]</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChkPromType__c</fullName>
        <label>[ChkPromType]</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChkRentType__c</fullName>
        <label>[ChkRentType]</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CouncilRate__c</fullName>
        <label>[CouncilRate]</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dexus__c</fullName>
        <label>[Dexus]</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmergencyLevy__c</fullName>
        <label>[EmergencyLevy]</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Escalation__c</fullName>
        <label>[Escalation]</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EstimatedOutgoings__c</fullName>
        <label>[EstimatedOutgoings]</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExecuteLeaseDate__c</fullName>
        <label>[ExecuteLeaseDate]</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Existing_Space__c</fullName>
        <label>[Existing Space]</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FitoutContribution__c</fullName>
        <label>[FitoutContribution]</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FloorNeighboringPlan__c</fullName>
        <label>[FloorNeighboringPlan]</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FoodCourtProduct__c</fullName>
        <label>[FoodCourtProduct]</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GSTNZ__c</fullName>
        <label>[GSTNZ]</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GST__c</fullName>
        <label>[GST]</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GuarantorNames__c</fullName>
        <label>[GuarantorNames]</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inspection__c</fullName>
        <label>[Inspection]</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InternalOwnersPack__c</fullName>
        <label>[InternalOwnersPack]</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LandTaxOutgoings__c</fullName>
        <label>[LandTaxOutgoings]</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LandTax__c</fullName>
        <label>[LandTax]</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeaseOligationField__c</fullName>
        <label>[LeaseOligationField]</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegalCost__c</fullName>
        <label>[LegalCost]</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NZStorageDeed__c</fullName>
        <label>[NZ Storage Deed]</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NZStorageLicense__c</fullName>
        <label>[NZ Storage License]</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OccupiedSpaces__c</fullName>
        <label>[OccupiedSpaces]</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OperatingExpenses__c</fullName>
        <label>[OperatingExpenses]</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpportunityLineItems__c</fullName>
        <label>[OpportunityLineItems]</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpptyClause__c</fullName>
        <label>[OpptyClause]</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpptyPropertyMgt__c</fullName>
        <label>[OpptyPropertyMgt]</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpptylineOutgoingProducts__c</fullName>
        <label>[OpptylineOutgoingProducts]</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpptylineProductCategory__c</fullName>
        <label>[OpptylineProductCategory]</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OutgoingProducts__c</fullName>
        <label>[OutgoingProducts]</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OutgoingProductsbyType__c</fullName>
        <description>Retrieve outgoings based on shop type and deal type RPP-10208</description>
        <label>[OutgoingProductsbyType]</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentGuarantees__c</fullName>
        <label>[ParentGuarantees]</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PromoReviewDesc__c</fullName>
        <description>Id of Promo Review Description query</description>
        <label>[PromoReviewDesc]</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PromoReviewSpecialCond__c</fullName>
        <description>Promoreview spl condition for edgecase 5 - Related to RPP-10444, RPP-10457, RPP-10456 , RPP-10458, RPP-10459</description>
        <label>[PromoReviewSpecialCond]</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PromoReview__c</fullName>
        <label>[PromoReview]</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PromotionFund__c</fullName>
        <label>[PromotionFund]</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PromotionLevy__c</fullName>
        <label>[PromotionLevy]</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PropertyLeasingExecutive__c</fullName>
        <label>[PropertyLeasingExecutive]</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PtyHoldingCmpy__c</fullName>
        <label>[PtyHoldingCmpy]</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RDIAccountTeam__c</fullName>
        <label>[RDIAccountTeam]</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RDIContactDesigner__c</fullName>
        <label>[RDIContactDesigner]</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RDIContactFM__c</fullName>
        <label>[RDIContactFM]</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RDIContactShopfitter__c</fullName>
        <label>[RDIContactShopfitter]</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RDIContactTC__c</fullName>
        <label>[RDIContactTC]</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RDIContacts__c</fullName>
        <label>[RDIContacts]</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RDICoordinator__c</fullName>
        <label>[RDICoordinator]</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RDIDCSpecialProj__c</fullName>
        <label>[RDIDCSpecialProj]</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RDIFacilitiesMgr__c</fullName>
        <label>[RDIFacilitiesMgr]</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RDILeasingExecutive__c</fullName>
        <label>[RDILeasingExecutive]</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RDIRetailAdmin__c</fullName>
        <label>[RDIRetailAdmin]</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RDIRetailDelivery__c</fullName>
        <label>[RDIRetailDelivery]</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RDIRetailDesign__c</fullName>
        <label>[RDIRetailDesign]</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RDITenancyCoordinator__c</fullName>
        <label>[RDITenancyCoordinator]</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RDI__c</fullName>
        <label>[RDI]</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReconfiguredSpace__c</fullName>
        <label>ReconfiguredSpace</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RentReviewDesc__c</fullName>
        <label>[RentReviewDesc]</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RentReviewDescription__c</fullName>
        <label>[RentReviewDescription]</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RentReviewSpecialCond__c</fullName>
        <description>Rent review spl condition for edgecase 5 - Related to RPP-10444, RPP-10457, RPP-10456 , RPP-10458, RPP-10459</description>
        <label>[RentReviewSpecialCond]</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RentReview__c</fullName>
        <label>[RentReview]</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAOutgoingProducts__c</fullName>
        <label>[SAOutgoingProducts]</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPACETYPE__c</fullName>
        <label>[SPACETYPE]</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SUMforOwnerPack__c</fullName>
        <label>[SUMforOwnerPack]</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SUMofReconfigured__c</fullName>
        <label>SUMofReconfigured</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SpaceGroup__c</fullName>
        <label>[SpaceGroup]</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SpaceandProperty__c</fullName>
        <label>[SpaceandProperty]</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SpecialCondi__c</fullName>
        <label>[SpecialCondi]</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SumForProducts__c</fullName>
        <label>[SumForProducts]</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SundayTrade__c</fullName>
        <label>[SundayTrade]</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TCOCost__c</fullName>
        <label>[TCOCost]</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TemplateAccptandCounter__c</fullName>
        <label>[TemplateAccptandCounter]</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TemplateCheckAssign__c</fullName>
        <label>[TemplateCheckAssign]</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TemplateCheckLease__c</fullName>
        <label>[TemplateCheckLease]</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TemplateCheckSurrender__c</fullName>
        <label>[TemplateCheckSurrender]</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TemplateCheckVariation__c</fullName>
        <label>[TemplateCheckVariation]</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TemplateCostEstimate__c</fullName>
        <label>[TemplateCostEstimate]</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TemplateCounterOffer__c</fullName>
        <label>[TemplateCounterOffer]</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TemplateDirectionLetter__c</fullName>
        <label>[TemplateDirectionLetter]</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TemplateDisclosureACT__c</fullName>
        <label>[TemplateDisclosureACT]</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TemplateDisclosureNSW__c</fullName>
        <label>[TemplateDisclosureNSW]</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TemplateDisclosureNZ__c</fullName>
        <label>[TemplateDisclosureNZ]</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TemplateDisclosureQLD__c</fullName>
        <label>[TemplateDisclosureQLD]</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TemplateDisclosureSA__c</fullName>
        <label>[TemplateDisclosureSA]</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TemplateDisclosureVIC__c</fullName>
        <label>[TemplateDisclosureVIC]</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TemplateDisclosureWA__c</fullName>
        <label>[TemplateDisclosureWA]</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TemplateInspection__c</fullName>
        <label>[TemplateInspection]</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TemplateLOOCommercial__c</fullName>
        <label>[TemplateLOOCommercial]</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TemplateLOO__c</fullName>
        <description>Letter of Offer</description>
        <label>[TemplateLOO]</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TemplateLocationPlan__c</fullName>
        <label>[TemplateLocationPlan]</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TemplateOwnerPack__c</fullName>
        <label>[TemplateOwnerPack]</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TemplateRDI__c</fullName>
        <label>[TemplateRDI]</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TemplateTenancyInstruction__c</fullName>
        <label>[TemplateTenancyInstruction]</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalLandTax__c</fullName>
        <label>[TotalLandTax]</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalOutgoingProductByType__c</fullName>
        <label>[TotalOutgoingProductByType]</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalOutgoingProduct__c</fullName>
        <label>[TotalOutgoingProduct]</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalSAOutgoingProduct__c</fullName>
        <label>[TotalSAOutgoingProduct]</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnleasedSpaces__c</fullName>
        <label>[UnleasedSpaces]</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnoccupiedSpaces__c</fullName>
        <label>[UnoccupiedSpaces]</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WaterRate__c</fullName>
        <label>[WaterRate]</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>CongaComposerTemplateValues</label>
</CustomObject>